# quokspie

./: .gitignore  Dockerfile  ReadMe.md  package-lock.json  package.json
bindings/python3/: DcgmDiag.py  DcgmGroup.py  DcgmReader.py  dcgm_agent.py  dcgm_collectd_plugin.py  dcgm_errors.py  dcgm_field_helpers.py  dcgm_fields.py  dcgm_fields_collectd.py  dcgm_fields_internal.py  dcgm_prometheus.py  dcgm_structs.py  denylist_recommendations.py
dcgmPython/: dcgmPoll.py
deb-packages/: install.sh  package_build.sh
deb-packages/DEBIAN/: control
deb-packages/etc/systemd/system/: quakspie.service
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  expanded-theme.d.ts  main.d.ts  main.tsx  theme.d.ts
frontend/src/assets/: quokspie.deb
frontend/src/components/: BoxHeader.d.ts  BoxHeader.tsx  DashboardBox.d.ts  DashboardBox.tsx  FlexBetween.d.ts  FlexBetween.tsx
frontend/src/scenes/Ahmed GPU/: Row1.tsx  Row2.tsx  index.tsx
frontend/src/scenes/Cluster/: Row1.d.ts  Row1.tsx  Row2.tsx  Row3.tsx  index.tsx
frontend/src/scenes/Signup/: Signup.d.ts  Signup.tsx
frontend/src/scenes/Taru GPU/: Row1.tsx
frontend/src/scenes/cluster/: Row3.d.ts
frontend/src/scenes/dashboard/: Row1.tsx  Row2.tsx  index.tsx
frontend/src/scenes/download/: Row2.tsx  Row3.tsx  index.tsx
frontend/src/scenes/home/: Row1.tsx  Row2.d.ts  Row2.tsx  Row3.tsx  index.tsx
frontend/src/scenes/login/: Login.tsx  Signup.tsx
frontend/src/scenes/logout/: Logout.d.ts  Logout.tsx
frontend/src/scenes/navbar/: index.tsx
frontend/src/scenes/predictions/: Row1.tsx  Row2.tsx  index.tsx
frontend/src/state/: api.d.ts  api.ts  types.d.ts  types.ts
nvml-c/: CMakeLists.txt  main.cpp
nvml-cpp/: CMakeLists.txt
nvml-cpp/headers/: gpu_metrics.hpp
nvml-cpp/libraries/: gpu_metrics.cpp
nvml-cpp/tests/: basic_tests.cpp  temperature_test.cpp
nvml-enclave/: CMakeLists.txt  main.cpp
nvml-enclave/App/: main.cpp  ocalls.cpp
nvml-enclave/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
nvml-python/: .env  ReadMe.md  data_base_setup.py  main.py  postin_json_payload.py  ramp_model.py  ramp_model_pt2.py  requirements.txt  trial_dynamo.py
release-daemon/: CMakeLists.txt  install.sh  main.cpp  package_build.sh  quakspie.deb  quakspied.deb  quokspie.deb  uninstaller.sh
release-daemon/etc/systemd/system/: quakspie.service
release-daemon/quakspie_d/: package_build.sh
release-daemon/quakspied/: install.sh
release-daemon/quakspied/DEBIAN/: control  preinst
release-daemon/quakspied/src/: installer.cpp
release-daemon/quokspie/: install.sh
release-daemon/quokspie/DEBIAN/: control  dumb_preinst  installer  postinst  preinst
release-daemon/quokspie/etc/systemd/system/: quokspie.service
release-daemon/quokspie/src/: CMakeLists.txt  Makefile  cmake_install.cmake  installer  installer.cpp  installer_Eric.cpp
release-daemon/src/: main.cpp
senior_design/: pyvenv.cfg
senior_design/Scripts/: activate  activate.bat
server/: .env  config.json  dynamodb.js  dynamodb_index.js  index.js  package-lock.json  package.json  test.js
server/models/: KPI.js  Product.js  Transaction.js  create_tables.js  db_access.js
server/routes/: deviceRoutes.js  kpi.js  product.js  route_helper.js  routes.js
tee/enclave/: gpu_odometer_enclave.cc  gpu_odometer_enclave.h  pollPack.h  untrusted.cpp
tee/host/: gpu_odometer_host.cc
